--- a/blackgoose.css
+++ b/blackgoose.css
@@ -5,12 +5,13 @@
 body {
     background-color: hsl(39, 41%, 92%);
     margin: 0 10%;
-    font-family: sans-serif;
+    font-family: 'EB Garamond', serif;
 }
 
 h1 {
     text-align: center;
-    font-family: serif;
+    /* font-family: serif; */
+    /* font-family: 'EB Garamond', serif; */
     font-weight: normal;
     text-transform: uppercase;
     margin-top: 1.875rem;
